--- a/package.json
+++ b/package.json
@@ -3,18 +3,31 @@
   "version": "1.0.0",
   "description": "",
   "private": true,
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Unisay/purescript-webpack-template.git"
+  },
   "directories": {
     "test": "test"
   },
   "scripts": {
-    "build": "webpack",
-    "dev": "webpack serve",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "postinstall": "spago install",
+    "clean": "rm -rf node_modules output dce-output .spago dist/* *.lock .cache",
+    "build": "spago -P build",
+    "watch": "spago -P build --watch",
+    "bundle:build": "spago -P build --purs-args '--codegen corefn'",
+    "bundle:dce": "zephyr -f Main.main",
+    "bundle:webpack": "webpack -c webpack-bundle.config.js",
+    "bundle": "npm run bundle:build && npm run bundle:dce && npm run bundle:webpack",
+    "dev": "webpack serve -c webpack-dev.config.js",
+    "test": "spago -P test"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^8.1.1",
     "html-webpack-plugin": "^5.3.1",
     "purs-loader": "^3.7.2",
     "webpack": "^5.31.2",
