--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,13 @@
 /node_modules/
 /.pulp-cache/
 /output/
+/dce-output/
 /generated-docs/
 /.psc-package/
 /.psc*
 /.purs*
 /.psa*
 /.spago
+/dist/
+/.direnv
+.envrc
