--- a/package.json
+++ b/package.json
@@ -26,10 +26,18 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "autoprefixer": "^10.2.5",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^8.1.1",
+    "css-loader": "^5.2.2",
     "html-webpack-plugin": "^5.3.1",
+    "postcss": "^8.2.10",
+    "postcss-import": "^14.0.1",
+    "postcss-loader": "^5.2.0",
+    "postcss-preset-env": "^6.7.0",
     "purs-loader": "^3.7.2",
+    "style-loader": "^2.0.0",
+    "tailwindcss": "^2.1.1",
     "webpack": "^5.31.2",
     "webpack-cli": "^4.6.0",
     "webpack-dev-server": "^3.11.2",
